--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Odin: Landing Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles.css">
+  <title>Project Odin: Landing Page</title>
 </head>
 <body>
-    
+  <div class="header">
+    <a class="logo">Header Logo</a>
+      <div class="header-right">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </div>
+  </div>
+  <div class="content">
+    <div class="hero">
+      <p>This website is awesome</p>
+      <p>Placeholder for subtext. Smaller font, color is lower contrast</p>
+      <button>Sign up</button>
+    </div>
+      <div class="heroimg"></div>
+    <div class="info">
+      <p>Some relevant information</p>
+      <img src="" alt="">
+      <p>Subtext</p>
+      <img src="" alt="">
+      <p>Subtext</p>
+      <img src="" alt="">
+      <p>Subtext</p>
+      <img src="" alt="">
+      <p>Subtext</p>
+    </div>
+    <figure class="quote">
+      <blockquote>
+        Tis' but a scratch!
+      </blockquote>
+      <figcaption>
+        &mdash;	That one knight, <cite>Monty Python</cite>
+      </figcaption>
+    </figure>
+    <div class="call">
+      <div class="signup">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for out product by clicking that button right over there!</p>
+        <button>Sign up</button>
+      </div>
+    </div>
+    <footer>
+      Copyright &copy; The Odin Project 2023
+    </footer>
+  </div>
 </body>
 </html>
