--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <div class="info">
       <p>Some relevant information</p>
       <img src="" alt="">
-      <p>Subtext</p>
+      <p>Add subtext</p>
       <img src="" alt="">
-      <p>Subtext</p>
+      <p>Add subtext</p>
       <img src="" alt="">
-      <p>Subtext</p>
+      <p>Add subtext</p>
       <img src="" alt="">
-      <p>Subtext</p>
+      <p>Add subtext</p>
     </div>
     <figure class="quote">
       <blockquote>
